[project]
name = "phe-flipoptimizer"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

